# caldaver

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  Vagrantfile  caldavercli  capacitor.config.json  migrations.yml  package-lock.json  package.json  playwright.config.js
.github/workflows/: android-apk.yml  ci.yml  daily-release.yml  docker.yml
.tx/: config
LICENSES/: ETAR-NOTICE.md
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
ansible/: playbook.yml
doc/: Makefile
doc/source/: conf.py  (+3 more)
docker/: agendav.conf  caldaver.conf  initialize-database.php  initialize-sqlite.php  run.sh  settings.php
docs/: ETAR_MOBILE_CALENDAR_PLAN.md  android-sdk-local.md
rust/: Cargo.toml
rust/crates/caldaver-server/: Cargo.toml
rust/crates/caldaver-server/src/: caldav_backend.rs  carddav_backend.rs  config.rs  imap_backend.rs  lib.rs  main.rs  storage.rs
scripts/: android-adb-smoke.sh  android-prepare-config.js  android-sdk-setup.sh  android-start-emulator.sh
test-results/: .last-run.json
tests/: android-first-run.test.js  e2e-cache-userflow.spec.js  etar-mobile-parity.test.js  live-ui.spec.js  mobile-review-v2.spec.js  mobile-review.spec.js  mobile-ui-enhancements.test.js  phpunit.xml  reminder-roundtrip.test.js  shared-calendar-remove.spec.js  sidebar-fab-refactor.spec.js  sidebar-fab-refactor.test.js  ui-audit-loop4.spec.js  ui-audit-loop5.spec.js  ui-audit-loop6.spec.js  ui-audit-loop7.spec.js  ui-audit-loop8.spec.js  ui-regressions.test.js  week-view-lines.spec.js
web/: composer.json
(+252 files in other folders)
