[package]
name = "caldaver-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = "0.10"
ammonia = "4"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
caldaver-core = { path = "../caldaver-core" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
deadpool-postgres = "0.14"
http = "1"
imap = "3.0.0-alpha.15"
mailparse = "0.16"
mime_guess = "2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
